# msgpack-c

./: CMakeLists.txt  cmake_install.cmake
example/c/: CMakeLists.txt  benchmark.c
example/cpp11/: CMakeLists.txt  sleep_cmd.cpp  variant_example.cpp
include/: CMakeLists.txt
include/msgpack/: CMakeLists.txt  pack.h  sbuffer.h  unpack_template.h  vrefbuffer.h  zbuffer.h
include/msgpack/adaptor/: CMakeLists.txt
include/msgpack/adaptor/cpp17/: CMakeLists.txt
include/msgpack/adaptor/tr1/: CMakeLists.txt
include/msgpack/predef/: CMakeLists.txt
include/msgpack/predef/architecture/: CMakeLists.txt
include/msgpack/predef/architecture/x86/: CMakeLists.txt
include/msgpack/predef/compiler/: CMakeLists.txt
include/msgpack/predef/detail/: CMakeLists.txt  test_def.h
include/msgpack/predef/hardware/: CMakeLists.txt
include/msgpack/predef/hardware/simd/: CMakeLists.txt
include/msgpack/predef/hardware/simd/ppc/: CMakeLists.txt
include/msgpack/predef/language/: CMakeLists.txt
include/msgpack/predef/os/: CMakeLists.txt
include/msgpack/predef/os/bsd/: CMakeLists.txt
include/msgpack/predef/other/: CMakeLists.txt
include/msgpack/predef/platform/: CMakeLists.txt
include/msgpack/preprocessor/: CMakeLists.txt
include/msgpack/preprocessor/arithmetic/: CMakeLists.txt
include/msgpack/preprocessor/arithmetic/detail/: CMakeLists.txt
include/msgpack/preprocessor/array/: CMakeLists.txt
include/msgpack/preprocessor/array/detail/: CMakeLists.txt
include/msgpack/preprocessor/comparison/: CMakeLists.txt
include/msgpack/preprocessor/config/: CMakeLists.txt
include/msgpack/preprocessor/control/: CMakeLists.txt
include/msgpack/preprocessor/control/detail/: CMakeLists.txt
include/msgpack/preprocessor/control/detail/dmc/: CMakeLists.txt
include/msgpack/preprocessor/debug/: CMakeLists.txt
include/msgpack/preprocessor/detail/: CMakeLists.txt
include/msgpack/preprocessor/detail/dmc/: CMakeLists.txt
include/msgpack/preprocessor/facilities/: CMakeLists.txt
include/msgpack/preprocessor/facilities/detail/: CMakeLists.txt
include/msgpack/preprocessor/iteration/: CMakeLists.txt
include/msgpack/preprocessor/iteration/detail/: CMakeLists.txt
include/msgpack/preprocessor/iteration/detail/bounds/: CMakeLists.txt
include/msgpack/preprocessor/iteration/detail/iter/: CMakeLists.txt
include/msgpack/preprocessor/list/: CMakeLists.txt
include/msgpack/preprocessor/list/detail/: CMakeLists.txt
include/msgpack/preprocessor/list/detail/dmc/: CMakeLists.txt
include/msgpack/preprocessor/list/detail/edg/: CMakeLists.txt
include/msgpack/preprocessor/logical/: CMakeLists.txt
include/msgpack/preprocessor/punctuation/: CMakeLists.txt
include/msgpack/preprocessor/punctuation/detail/: CMakeLists.txt
include/msgpack/preprocessor/repetition/: CMakeLists.txt
include/msgpack/preprocessor/repetition/detail/: CMakeLists.txt
include/msgpack/preprocessor/repetition/detail/msvc/: CMakeLists.txt
include/msgpack/preprocessor/selection/: CMakeLists.txt
include/msgpack/preprocessor/seq/: CMakeLists.txt
include/msgpack/preprocessor/seq/detail/: CMakeLists.txt
include/msgpack/preprocessor/slot/: CMakeLists.txt
include/msgpack/preprocessor/slot/detail/: CMakeLists.txt
include/msgpack/preprocessor/tuple/: CMakeLists.txt
include/msgpack/preprocessor/variadic/: CMakeLists.txt
include/msgpack/preprocessor/variadic/detail/: CMakeLists.txt
include/msgpack/v1/: CMakeLists.txt
include/msgpack/v1/adaptor/: CMakeLists.txt
include/msgpack/v1/adaptor/boost/: CMakeLists.txt
include/msgpack/v1/adaptor/cpp11/: CMakeLists.txt
include/msgpack/v1/adaptor/detail/: CMakeLists.txt
include/msgpack/v1/detail/: CMakeLists.txt
include/msgpack/v2/: CMakeLists.txt
include/msgpack/v2/adaptor/: CMakeLists.txt
include/msgpack/v2/adaptor/detail/: CMakeLists.txt
include/msgpack/v3/: CMakeLists.txt
include/msgpack/v3/adaptor/boost/: CMakeLists.txt
include/msgpack/v3/detail/: CMakeLists.txt
src/: CMakeLists.txt  objectc.c  unpack.c  vrefbuffer.c  zone.c
