add_subdirectory(boost)
add_subdirectory(detail)
target_sources(msgpackc
	INTERFACE
		size_equal_only_decl.hpp;
		nil_decl.hpp;
		adaptor_base.hpp;
		ext_decl.hpp;
		adaptor_base_decl.hpp;
		raw_decl.hpp;
		int_decl.hpp;
		fixint_decl.hpp;
		msgpack_tuple_decl.hpp;
		map_decl.hpp;
		define_decl.hpp;
		check_container_size_decl.hpp;
		array_ref_decl.hpp;
		v4raw_decl.hpp
)
target_include_directories(msgpackc INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
